# oreilly_olt_stl_algorithms

Solutions/2_STL_Algorithms/: Accumulate_1.cpp  Accumulate_2.cpp  BadAccumulate.cpp  BadCopy.cpp  BadTransform.cpp  CMakeLists.txt  CartesianProduct.cpp  ExtractStrings.cpp  Fibonacci.cpp  IsEmailAddress.cpp  IsPalindrome.cpp  IsPunct.cpp  LongestStreak.cpp  MajorityVote.cpp  Makefile  Median.cpp  Partition.cpp  RangesRefactoring_Animals.cpp  RangesRefactoring_Countries.cpp  STLintro.cpp  STLpro.cpp  Simpson.cpp  SimpsonPro.cpp  SortSubrange.cpp  Trap.cpp
Tasks/: CMakeLists.txt
Tasks/2_STL_Algorithms/: Accumulate_1.cpp  Accumulate_2.cpp  AlgorithmPerformance1.cpp  AlgorithmPerformance2.cpp  BadAccumulate.cpp  BadCopy.cpp  BadFind.cpp  BadRemove.cpp  BadTransform.cpp  CMakeLists.txt  CartesianProduct.cpp  EqualRange.cpp  ExtractStrings.cpp  Fibonacci.cpp  IsEmailAddress.cpp  IsPalindrome.cpp  IsPunct.cpp  IsPunct_Benchmark.cpp  LongestStreak.cpp  MajorityVote.cpp  Makefile  Median.cpp  NthElement.cpp  Partition.cpp  RangesExample.cpp  RangesRefactoring_Animals.cpp  STLintro.cpp  STLpro.cpp  Simpson.cpp  SimpsonPro.cpp  SortSubrange.cpp  Trap.cpp
